--- a/intro.html
+++ b/intro.html
@@ -39,11 +39,11 @@
 
 <body>
 
-	<div class="jumbotron" id="intro">
+	<div class="" id="intro">
 		<div class="container-fluid">
 			<div class="col-md-12">
-				<h1 id="title">Welcome to the game!</h1>
-				<h2 class="sub-text">I hope you enjoy playing Frogger</h2>
+				<h1 id="title">Welcome to Frogger!</h1>
+				<h2 class="sub-text">I hope you enjoy playing <i class="fa fa-smile-o fa-spin" aria-hidden="true"></i></h2>
 				<div class="buttons">
 				<button type="button" class="btn btn-primary btn-lg click-me"><a href="index.html" class="play">Play Now!</a></button>
 				<!-- Button trigger modal -->
@@ -63,16 +63,16 @@
 				      <div class="modal-body" id="instruction">
 				        <h3>Your goal is to avoid colliding into bugs, so you can reach the water section and win. <br>To move your character, use the keyboard arrows.</h3>
 				        <div class="col-md-6 intro-text">
-				        <img src="images/player.png" alt="character">
-				        <h4>Player</h4>
-				        <img src="images/enemy.png" alt="enemy">
-				        <h4>Enemies</h4>
+				        <h4><img src="images/player.png" alt="character">Player</h4>
+				        <h4><img src="images/enemy.png" alt="enemy"> Enemies</h4>
+				        
 				        </div>
 				        <div class="col-md-6 intro-text">
 						<h4><i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i> Move up</h4>
 				        <h4><i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i> Move down</h4>
 				        <h4><i class="fa fa-arrow-left fa-2x" aria-hidden="true"></i> Move left</h4>
 				        <h4><i class="fa fa-arrow-right fa-2x" aria-hidden="true"></i> Move right</h4>
+				        <br>
 				        </div>
 				      </div>
 				      <div class="modal-footer">
@@ -82,13 +82,14 @@
 				  </div>
 				</div>
 
-
 			</div>
+
 			<div class="col-md-12">
 				<img src="images/frogger.png" alt="Frogger game preview">
 			</div>
-			<footer id="footer" class="center">Created by Richard Chan</footer>
-		</div>
+			<div class="col-md-12">
+				<footer id="footer">Created by Richard Chan</footer>
+			</div>
 	</div>
 	<!-- JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
