adding README file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<footer><h2 id="data"><span id="score">SCORE: 0</span> <span id="lives">LIVES: 5</span></h2></footer>
+	<footer><p id="created">Created by Richard Chan</p>
+	
+	<br>
+	<h2 id="data"><span id="score">SCORE: 0</span> <span id="lives">LIVES: 5</span></h2>
+	</footer>
 	<!-- JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/resources.js"></script>
