--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<footer><p id="created">Created by Richard Chan</p>
 	
 	<br>
-	<h2 id="data"><span id="score">SCORE: 0</span> <span id="lives">LIVES: 5</span></h2>
+	<h2 id="data"><span id="score">SCORE: 0</span> <span id="lives">LIVES: 5</span> <span id="leve">LEVEL: 1"</span></h2>
 	</footer>
 	<!-- JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
