--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    
+    <!-- Font Awesome -->
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
     <title>Arcade Game: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<footer><p id="created">Created by Richard Chan</p>
-	
+	<br>
+	<a href="https://twitter.com/intent/tweet?&text=I%20am%20playing%20this%20game%20and%20I%20like%20it.%20You%20should%20give%20it%20a%20try!&tw_p=tweetbutton&url=http%3A%2F%2Fblog.hubspot.com%2Fmarketing%2Fsocial-media-buttons&via=rchrdchn" target="_blank"><i class="fa fa-twitter-square fa-2x" id="twitter" aria-hidden="true"></i></a>
+	<i class="fa fa-facebook-square fa-2x" id="facebook" aria-hidden="true"></i>
 	<br>
 	<h2 id="data"><span id="score">SCORE: 0</span> <span id="lives">LIVES: 5</span> <span id="leve">LEVEL: 1"</span></h2>
 	</footer>
