--- a/frogger.html
+++ b/frogger.html
@@ -75,9 +75,9 @@
 			<div class="work">
 				<div class="row">
 					<section class="col-md-12">
-						<a href="intro.html" target="_blank"><img src="images/frogger.png" class="portfolio img-responsive text-center" alt="city college of san francisco website redesign"></a>
+						<a href="intro.html" target="_blank"><img src="images/frogger-devices.png" class="portfolio img-responsive text-center" alt="city college of san francisco website redesign"></a>
 						
-						<a href="intro.html" target="_blank"><h2>Play Now</h2></a>
+						<a href="intro.html" class="text-center" target="_blank"><h2>Play Now</h2></a>
 
 						<h2>Overview</h2>
 						<p class="text">This is a personal project in which I recreated the Classic Arcade Game Frogger using HTML5, JavaScript, jQuery, and Object-Oriented Programming. I used HTML5 to add a canvas that consists of grass, rocky floors and a water area, while also adding a player and an infinite amount of bugs to the game to make it more fun as well as challenging. The player is controlled using the keyboard arrows, which is programmed using JavaScript, jQuery, and Object-Oriented programming. In the process of building this game I learned how challenging yet fun it is to build games using programming skills.</p>
